# propheseer-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/propheseer/: __init__.py  _base_client.py  _client.py  _constants.py  _exceptions.py  _pagination.py  _response.py  _websocket.py
src/propheseer/resources/: __init__.py  arbitrage.py  categories.py  history.py  keys.py  markets.py  ticker.py  unusual_trades.py
src/propheseer/types/: __init__.py  arbitrage.py  categories.py  history.py  keys.py  markets.py  shared.py  ticker.py  unusual_trades.py
tests/: conftest.py  test_client.py  test_errors.py  test_pagination.py
tests/resources/: test_arbitrage.py  test_markets.py
