[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propheseer"
version = "1.0.0"
description = "Official Python SDK for the Propheseer prediction markets API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Propheseer", email = "support@propheseer.com" },
]
keywords = [
    "prediction-markets",
    "polymarket",
    "kalshi",
    "gemini",
    "api",
    "sdk",
    "arbitrage",
    "trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
websocket = [
    "websockets>=11.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://propheseer.com"
Documentation = "https://propheseer.com/docs"
Repository = "https://github.com/JeremyHi/propheseer-python-sdk"
Changelog = "https://github.com/JeremyHi/propheseer-python-sdk/releases"
"Issue Tracker" = "https://github.com/JeremyHi/propheseer-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/propheseer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
